# A-Maze-ing-42-Python-project

./: .gitignore  Kruskal_generator.py  Makefile  README.md  a_maze_in.py  a_maze_ing.py  a_star.py  ascii.py  carve_algo.py  config.txt  draw_maze.py  draw_slow.py  hamza  kruskal.py  main.py  main_of_terminal.py  maze.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  menu.py  minitouls.py  output_gen.py  parsing.py  prim.py  printer.py  sound.py  test.py
.obsidian/: workspace.json
ascii_print/: __init__.py  ascii.py  printer.py
mazegen_package/: README_package.md  __init__.py  pyproject.toml  setup.py
mazegen_package/mazegen/: .maze_generator.py.swp  __init__.py  maze_generator.py
test/: draw_faster.py
