[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generation module for the A-Maze-ing 42 project"
readme = "README_package.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["maze", "generator", "algorithm", "42"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.urls]
Homepage = "https://github.com/your-login/a-maze-ing"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]