[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generation module for the A-Maze-ing 42 project"
readme = "README_package.md"
requires-python = ">=3.10"
keywords = ["maze", "generator", "algorithm", "42"]

[project.urls]
Homepage = "https://github.com/Samadi-sudo/A-Maze-ing-42-Python-project"

[tool.setuptools]
packages = ["mazegen_package", "mazegen_package.mazegen"]

[tool.setuptools.package-dir]
"mazegen_package" = "."
"mazegen_package.mazegen" = "mazegen"
